# self_driving_car

./: .gitignore  README.md
ros_ws/: parsed_sensor_data.txt
ros_ws/src/carla_bridge/: CMakeLists.txt  package.xml
ros_ws/src/carla_bridge/config/vehicles/: tesla_model3.yaml
ros_ws/src/carla_bridge/include/: config_loader.hpp  sensor_config.hpp
ros_ws/src/carla_bridge/src/: config_loader.cpp
ros_ws/src/carla_bridge/tests/: dump_config_loader.cpp  test_config_loader.cpp
ros_ws/src/carla_bridge/tests/data/: test_sensor_data.yaml
ros_ws/src/carla_bridge/tests/install/: local_setup.sh  setup.sh
ros_ws/src/carla_bridge/tests/log/: latest_build
ros_ws/src/common/: CMakeLists.txt  package.xml
ros_ws/src/control/: package.xml
ros_ws/src/install/: local_setup.sh  setup.sh
ros_ws/src/install/carla_bridge/share/ament_index/resource_index/package_run_dependencies/: carla_bridge
ros_ws/src/install/carla_bridge/share/carla_bridge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/src/install/carla_bridge/share/carla_bridge/cmake/: carla_bridgeConfig.cmake
ros_ws/src/log/: latest_build
ros_ws/src/perception/: package.xml
ros_ws/src/planning/: package.xml
scripts/: build_ros.sh
sim/: carla_client.py
